# AnthillProblem

./: .gitignore  README.md
C++/: CMakeLists.txt
C++/doc/: README.txt
C++/examples/circle/: boundary.in  grid.txt  log.txt  result.out  run.sh
C++/examples/ellipse/: boundary.in  grid.txt  log.txt  result.out  run.sh
C++/examples/hyperbola/: boundary.in  log.txt  result.out
C++/examples/line/: boundary.in  log.txt  result.out  run.sh
C++/examples/parabola/: boundary.in  grid.txt  log.txt  result.out  run.sh
C++/examples/square/: boundary.in  grid.txt  log.txt  result.out  run.sh
C++/src/: main.cpp
C++/src/functions/: functions.cpp  functions.h
C++/src/grid/: grid.cpp  grid.h  gridfunc.cpp  gridfunc.h  gridnode.cpp  gridnode.h
C++/src/polynomial/: polyfunc.cpp  polyfunc.h  polynomial.cpp  polynomial.h  term.cpp  term.h
Code/: figure3.py  functions.py  question1.py  question3.py
Python3/: figure1.py  figure2.py  question1.py  question2.py
Solution/: solution.aux  solution.out  solution.tex
